--- a/src/components/InterventionRerate.css
+++ b/src/components/InterventionRerate.css
@@ -2,22 +2,23 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 3em 1em 4em;
-    height: 3em;
-    /* background-image: linear-gradient(to right, rgba(255, 255, 255, 1) 30%, rgba(0, 0, 0, 0.87) 60%);
+    padding: 3em 0 1em;
+    /* height: 3em; */
+    /* background-image: linear-gradient(to right, rgba(255, 255, 255, 1) 30%, rgba(39, 39, 39, 0.87) 60%);
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;  */
-    margin: 0 0 2em;
+    background-attachment: fixed; 
+    margin: 0 0 2em; */
 }
 #anxietyScore.rerateAnxietyScore {
     font-size: 2.3em;
     font-weight: 400;
-    padding: .3em 0em 1.5em;
+    padding: .3em 0em 1.5em ;
     margin: 1em .3em 1em; 
-    width: 1em;
+    width: .2em;
     height: 1em;
-    background-image: linear-gradient(to left,rgb(255, 190, 210) 35%, rgba(115, 181, 223, 0.959) 65%);
+    /* background-image: linear-gradient(to left,rgb(255, 51, 0) 35%, rgb(243, 69, 69) 45%, rgba(122, 172, 253, 0.959) 55%, rgba(37, 21, 255, 0.959) 95%); */
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 1) 10%, rgba(137, 15, 251, 0.87) 60%);
     background-size: cover;
     background-position: center;
     background-attachment: fixed; 
@@ -30,11 +31,19 @@ h3.center-text {
 .description {
     margin: 4em 0 0;
 }
-#description {
-    margin: 8em auto 7em;
+.description-rerate #description {
+    margin: 8em auto 5em;
     display: block;
-    height: 7em;
+    height: 10em;
+    color: rgb(11, 121, 211);
  }
  .heading {
-     padding: 4em .2em 0;
+     padding: 4em .2em 3em;
+     font-weight: 700;
+ }
+ .rerate-heading {
+     font-size: 2em;
+ }
+ .rerate-subheading {
+     font-size: 3em;
  }
